# vca

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
coq/: .depend  Admissibility.v  Commutativity.v  Core.v  CoreStar.v  Lambda.v  Makefile  Model.v  Replay.v  Temporal.v  Towers.v  Transitions.v
specs/: sc.md  vca.md
src/: admissibility.rs  coherence.rs  constraint.rs  core.rs  dimension.rs  independence.rs  lambda.rs  lib.rs  registry.rs  relation.rs  replay.rs  sla.rs  slot.rs  stratification.rs  streams.rs  system.rs  temporal.rs  tower.rs  transitions.rs  types.rs
tests/: properties.rs  theorems.rs
