[workspace]
members = [
    ".",
]
resolver = "2"

[package]
name = "vca"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
thiserror = "2.0.17"

[features]
default = []
serde = ["dep:serde"]

[dependencies.serde]
version = "1.0"
features = ["derive"]
optional = true

[lints.rust]
warnings = "deny"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[dev-dependencies]
proptest = "1.9.0"
rstest = "0.26.1"
serde_json = "1.0"
